--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <section class="metaBlock">
         <header class="_mainBlock header">
-            <div style="display: flex; justify-content: cneter; align-items: center;"><img class="menuNavElement1" src="image/insilio.png">
+            <div style="display: flex; justify-content: cneter; align-items: center;"><a href="https://zh-maxim.github.io/insilio/">
+                <img class="menuNavElement1" src="image/insilio.png"></a>
                 <div class="menuNavElement2" style="margin-left: 50px;">Insilio</div>
             </div>
             <div class="menuNavElement3"></div>
